# LCD-1.69

./: CMakeLists.txt  PROJECT_DOC.md
components/BSP/: CMakeLists.txt
components/BSP/LCD/: lcd.c  lcd.h
components/BSP/LVGL/: hand_map.c  hand_map_right.c  lvgl_ui.c  lvgl_ui.h  ui_matrix.c  ui_matrix.h
components/BSP/Stim/: dac80502.c  dac80502.h  stim.c  stim.h  stim_adc.c  stim_adc.h
components/BSP/UART/: uart.c  uart.h  uart_receive.c  uart_receive.h
main/: idf_component.yml  main.c
